# BBDays2024_Nr9_Front

./: README.md
BBDays-Hackathon_Embedded_First_Aid_Frontend/: Index.html
BBDays-Hackathon_Embedded_First_Aid_Kit/: sdkconfig
BBDays-Hackathon_Embedded_First_Aid_Kit/main/: CMakeLists.txt  gpio.c  main.c  tasks_settings.h
BBDays-Hackathon_Embedded_First_Aid_Kit/main/webpage/: Index.html
BBDays-Hackathon_Embedded_Main_Hub/: .cproject  sdkconfig
BBDays-Hackathon_Embedded_Main_Hub/main/: CMakeLists.txt  http_server.c  lora.c
BBDays-Hackathon_Server_Backend/Migrations/: DataContextModelSnapshot.cs
BBDays-Hackathon_Server_Backend/Models/: RegisterModel.cs
BBDays-Hackathon_Server_Frontend/: package-lock.json
BBDays-Hackathon_Server_Frontend/frontend/: package.json
Pages/: Index.html  Login.html  Profile.html  Register.html
WebApplication1/: Program.cs  WebApplication1.csproj
WebApplication1/Database/: DataContext.cs
WebApplication1/Migrations/: 20240915112100_init1.cs
_Embedded_First_Aid_Frontend/: Index.html
_Embedded_First_Aid_Kit/: .cproject  .project  sdkconfig.old
_Embedded_First_Aid_Kit/main/: gpio.h  http_server.c  lora.c  wifi.c  wifi.h
_Embedded_Main_Hub/: .project  CMakeLists.txt  sdkconfig.old
_Embedded_Main_Hub/main/: main.c  tasks_settings.h  wifi.c  wifi.h
_Server_Backend/: WebApplication1.sln
_Server_Backend/Migrations/: 20240915112100_init1.Designer.cs
_Server_Backend/Models/: MedkitModel.cs
_Server_Backend/Properties/: launchSettings.json
vue_frontend/frontend/: package-lock.json  package.json  vite.config.mjs
(+15 files in other folders)
